# lead-scraper

./: .vercelignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.bat  setup.sh  update.bat  update.sh  vercel.json
.claude/: launch.json
api/: index.py  requirements.txt
lead_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
leads_output/: esemény_Budapest_20260330_164416.csv  esemény_Budapest_20260330_164416.xlsx  esemény_Budapest_20260330_173555.csv  esemény_Budapest_20260330_173728.csv  esemény_Budapest_20260330_173836.csv  esemény_Budapest_20260330_173925.csv  esemény_Budapest_20260330_173925.xlsx  esemény_Budapest_20260330_173933.csv  esemény_Budapest_20260330_180311.csv  esemény_Budapest_20260330_180311.xlsx  esemény_szervező_Budapest_20260330_205034.csv  esemény_szervező_Budapest_20260330_205733.csv  esemény_szervező_Budapest_20260330_205733.xlsx  konferencia_Budapest_20260330_211138.csv  konferencia_Budapest_20260330_211138.xlsx  nemzetközi_találkozó_Budapest_20260330_211802.csv  nemzetközi_találkozó_Budapest_20260330_211802.xlsx  szórakozás_Budapest_20260330_210408.csv  szórakozás_Budapest_20260330_210408.xlsx
scraper/: __main__.py  cli.py  config.py  db.py  models.py  projects.py  settings.py  webhooks.py
scraper/email/: imap_poller.py  smtp.py  validator.py
scraper/export/: csv_exporter.py  excel_exporter.py
scraper/extractors/: contact.py  schema_org.py  validators.py
scraper/http/: rate_limiter.py  robots.py  session.py
scraper/pipeline/: deduplicator.py  orchestrator.py
scraper/scrapers/: ai_queries.py  base.py  (+10 more)
(+5 files in other folders)
