[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "lead-scraper"
version = "1.0.0"
description = "Ultimate lead scraping tool — web UI, TUI, and CLI"
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "phonenumbers>=8.13",
    "rich>=13.7",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "tenacity>=8.2",
    "ddgs>=9.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
maps = ["playwright>=1.44"]

[project.scripts]
scraper     = "scraper.__main__:main_entry"
scraper-web = "scraper.web.server:run_server"
scraper-tui = "scraper.tui.app:run_app"

# Vercel framework detection — points to the FastAPI app object
app = "scraper.web.server:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"scraper.web" = ["static/*", "static/**/*"]
